--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.10",
     "nodemon": "^3.0.1",
     "parse-data-uri": "^0.2.0"
   }
