--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.10",
     "nodemon": "^3.0.1",
-    "parse-data-uri": "^0.2.0"
+    "parse-data-uri": "^0.2.0",
+    "razorpay": "^2.9.2"
   }
 }
