Complete Razorpay Paymetgetway

--- a/server/data/config.env
+++ b/server/data/config.env
@@ -2,3 +2,16 @@ PORT = 5000
 HOST = "http://localhost:"
 DB_CONNECTION =  "mongodb://127.0.0.1:27017/"
 JWT_URI = "askldfasdhgpfasdihflkahsdfpas"
+
+CORS_ORIGIN_URL = 'http://localhost:5173'
+
+
+# Cloudinary Configrination
+Cloudinary_cloud_name= 'ddixq9qyw',
+Cloudinary_api_key= '457974513769685',
+Cloudinary_api_secret= 'vtXUFQ4XPDtF7xYlCASYgIolvtE'
+
+# Razerpay Configrination
+
+Razorpay_Key_Id = "rzp_test_b8U50api1N1vw5"
+Razorpay_Key_Secret = "fp83ktSaduL87SvIphdVXh5t"
