--- a/server/data/config.env
+++ b/server/data/config.env
@@ -7,9 +7,9 @@ CORS_ORIGIN_URL = 'http://localhost:5173'
 
 
 # Cloudinary Configrination
-Cloudinary_cloud_name= 'ddixq9qyw',
-Cloudinary_api_key= '457974513769685',
-Cloudinary_api_secret= 'vtXUFQ4XPDtF7xYlCASYgIolvtE'
+Cloudinary_cloud_name = "ddixq9qyw"
+Cloudinary_api_key = "457974513769685"
+Cloudinary_api_secret = "vtXUFQ4XPDtF7xYlCASYgIolvtE"
 
 # Razerpay Configrination
 
