--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "history": "^5.3.0",
+    "lucide-react": "^0.453.0",
     "protected-route-react": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
